--- a/OpenEdXMobile/res/layout/fragment_learn.xml
+++ b/OpenEdXMobile/res/layout/fragment_learn.xml
@@ -32,7 +32,7 @@
 
                 <LinearLayout
                     android:id="@+id/ll_learn_selection"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
                     android:orientation="horizontal">
