refactor: Minor code changes

--- a/OpenEdXMobile/res/color/edx_segmented_control_text_selector.xml
+++ b/OpenEdXMobile/res/color/edx_segmented_control_text_selector.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/black" android:state_checked="true" android:state_enabled="false" android:state_selected="true" />
-    <item android:color="@color/white" android:state_checked="true" android:state_selected="true" />
-    <item android:color="@color/primaryXLightColor" android:state_enabled="false" />
+    <item android:state_checked="true" android:state_enabled="false" android:color="@color/black" />
+    <item android:state_checked="true" android:color="@color/white" />
+    <item android:state_enabled="false" android:color="@color/primaryXLightColor" />
     <item android:color="@color/primaryBaseColor" />
 </selector>
