--- a/OpenEdXMobile/res/layout/collapsible_toolbar_layout.xml
+++ b/OpenEdXMobile/res/layout/collapsible_toolbar_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/appbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,25 +13,30 @@
         android:id="@+id/collapsingToolbar"
         android:layout_width="match_parent"
         android:layout_height="@dimen/edx_quadruple_margin"
-        app:collapsedTitleGravity="center_vertical"
-        app:collapsedTitleTextAppearance="@style/MainDashboardCollapsedToolbarTitle"
-        app:expandedTitleGravity="center_vertical"
-        app:expandedTitleMargin="0dp"
-        app:expandedTitleMarginStart="@dimen/edx_default_margin"
-        app:expandedTitleTextAppearance="@style/MainDashboardExpandedToolbarTitle"
         app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">
 
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="@dimen/collapsed_toolbar_height"
+            android:layout_gravity="center_vertical"
             android:background="@color/neutralWhite"
             android:gravity="center_vertical"
             android:paddingStart="@dimen/container_padding"
             android:paddingEnd="@dimen/edx_default_margin"
-            app:contentInsetLeft="0dp"
             app:contentInsetStart="0dp"
-            app:layout_collapseMode="pin"
-            app:titleTextAppearance="@style/MainDashboardCollapsedToolbarTitle" />
+            app:layout_collapseMode="parallax">
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_title"
+                style="@style/MainDashboardToolbarTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical"
+                android:paddingEnd="@dimen/learn_drop_down_icon_margin"
+                tools:ignore="RtlSymmetry"
+                tools:text="@string/label_discover" />
+
+        </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.CollapsingToolbarLayout>
 
