feat: Profile section update (#1804)
- Remove the Profile screen from the navigation flow
- Update the UI for the Edit screen
- The Profile screen is still visible from the discussions module

Fixes: LEARNER-9445

--- a/OpenEdXMobile/res/values/dimens.xml
+++ b/OpenEdXMobile/res/values/dimens.xml
@@ -217,6 +217,8 @@
     <dimen name="edx_default_margin">16dp</dimen>
     <dimen name="edx_default_margin_double">32dp</dimen>
     <dimen name="profile_view_button_height">36dp</dimen>
+    <dimen name="profile_switcher_radius">7dp</dimen>
+    <dimen name="profile_switcher_card_height">36dp</dimen>
 
     <!-- Segmented Control Dimensions -->
     <dimen name="edx_segmented_control_start_corner">5dp</dimen>
