--- a/OpenEdXMobile/res/values/styles.xml
+++ b/OpenEdXMobile/res/values/styles.xml
@@ -532,6 +532,10 @@
         <item name="android:fontFamily">?attr/fontSemiBold</item>
     </style>
 
+    <style name="ProfileTabItem">
+        <item name="android:textSize">@dimen/edx_x_small</item>
+    </style>
+
     <style name="CourseDashboardExpandedToolbarTitle">
         <item name="android:textColor">@color/neutralWhiteT</item>
         <item name="android:textSize">@dimen/edx_large</item>
