feat: Add Landscape for Launch, Login and Register screen
- Maintain state after orientation change on launch, login
and register screen screen
- Fix the AppBar TextSize in landscape mode

Fixes: LEARNER-9461

--- a/OpenEdXMobile/res/values/dimens.xml
+++ b/OpenEdXMobile/res/values/dimens.xml
@@ -9,6 +9,7 @@
 
     <!-- Per Material Design Guidelines -->
     <dimen name="action_bar_icon_size">24dp</dimen>
+    <dimen name="action_bar_text_size">20sp</dimen>
 
     <!-- Alert dialog default padding -->
     <!-- Note: Copied from the support library, since they are private to the library
