feat: add table of contents from subsection in course unit
- Tapping the unit title brings up the Table of Content from the subsection in a dropdown.
- Checkmarks to be shown on with the completed units.
- Lock icon to be shown for units with locked content
- Tapping a unit from the dropdown closes the dropdown and brings the user to the tapped unit
- Hide the drop-down if there is only one unit(no other unit to show) in the sub-section.

fixes: LEARNER-9300

--- a/OpenEdXMobile/res/values/dimens.xml
+++ b/OpenEdXMobile/res/values/dimens.xml
@@ -120,6 +120,7 @@
     <dimen name="course_unit_nav_bar_padding_left">15dp</dimen>
     <dimen name="course_unit_nav_bar_padding_right">@dimen/course_unit_nav_bar_padding_left</dimen>
     <dimen name="course_unit_message_icon_size">140dp</dimen>
+    <dimen name="course_unit_nav_spinner_item_height">36dp</dimen>
 
     <dimen name="tab_height">56dp</dimen>
     <dimen name="tab_indicator_height">2dp</dimen>
