feat: add component navigation using viewpager2
fixes: LEARNER-9300

--- a/OpenEdXMobile/res/layout/fragment_course_unit_video.xml
+++ b/OpenEdXMobile/res/layout/fragment_course_unit_video.xml
@@ -54,7 +54,8 @@
         android:divider="@null"
         android:importantForAccessibility="noHideDescendants"
         android:paddingTop="@dimen/widget_margin_half"
-        android:paddingBottom="@dimen/widget_margin_half" />
+        android:paddingBottom="@dimen/widget_margin_half"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <FrameLayout
         android:id="@+id/fl_mini_controller"
