--- a/OpenEdXMobile/res/layout/activity_discovery_launch.xml
+++ b/OpenEdXMobile/res/layout/activity_discovery_launch.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    android:orientation="vertical"
-    android:splitMotionEvents="false">
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/ll_content"
