feat: footer section redesign in unit view
- Remove prev/next component title under the prev/next buttons respectively.
- The only way to navigate to a component is to use the prev/next buttons or swipe (no unit outlines).
- prev/next behavior at the beginning/ending of a unit does not change (takes user to the last component in the prev unit/first component in the next unit).
- Swipe behavior does not change.

fixes: LEARNER-9303

--- a/OpenEdXMobile/res/layout/activity_course_unit_navigation_new.xml
+++ b/OpenEdXMobile/res/layout/activity_course_unit_navigation_new.xml
@@ -2,140 +2,180 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/course_navigation_toolbar"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/appbar"
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:id="@+id/course_navigation_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:animateLayoutChanges="true"
-            android:background="@color/toolbar_background_color">
+            android:layout_height="0dp"
+            android:paddingTop="@dimen/widget_margin"
+            app:layout_constraintBottom_toTopOf="@+id/course_unit_nav_bar">
 
-            <com.google.android.material.appbar.CollapsingToolbarLayout
-                android:id="@+id/collapsing_toolbar_layout"
+            <com.google.android.material.appbar.AppBarLayout
+                android:id="@+id/appbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">
+                android:animateLayoutChanges="true"
+                android:background="@color/toolbar_background_color">
 
-                <LinearLayout
-                    android:id="@+id/expanded_toolbar_layout"
+                <com.google.android.material.appbar.CollapsingToolbarLayout
+                    android:id="@+id/collapsing_toolbar_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">
 
                     <LinearLayout
+                        android:id="@+id/expanded_toolbar_layout"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/primaryLightColor"
-                        android:orientation="vertical"
-                        android:padding="@dimen/edx_default_margin"
-                        app:layout_collapseMode="parallax">
+                        android:orientation="vertical">
 
-                        <android.widget.Space
-                            android:id="@+id/space"
-                            android:layout_width="match_parent"
-                            android:layout_height="@dimen/collapsed_toolbar_height" />
-
-                        <com.google.android.material.textview.MaterialTextView
-                            android:id="@+id/course_sub_section_title"
+                        <LinearLayout
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:ellipsize="end"
-                            android:fontFamily="?attr/fontRegular"
-                            android:textColor="@color/neutralWhiteT"
-                            android:textDirection="locale"
-                            android:textSize="@dimen/edx_small"
-                            tools:text="What is Happiness?" />
+                            android:background="@color/primaryLightColor"
+                            android:orientation="vertical"
+                            android:padding="@dimen/edx_default_margin"
+                            app:layout_collapseMode="parallax">
 
-                        <FrameLayout
-                            android:id="@+id/fl_units_drop_down"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="@dimen/edx_x_quarter_margin">
+                            <android.widget.Space
+                                android:id="@+id/space"
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/collapsed_toolbar_height" />
 
                             <com.google.android.material.textview.MaterialTextView
-                                android:id="@+id/course_unit_title"
-                                android:layout_width="wrap_content"
+                                android:id="@+id/course_sub_section_title"
+                                android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:ellipsize="end"
-                                android:fontFamily="?attr/fontBold"
+                                android:fontFamily="?attr/fontRegular"
                                 android:textColor="@color/neutralWhiteT"
                                 android:textDirection="locale"
-                                android:textSize="@dimen/edx_base"
-                                tools:text="Introducing Weekly Check In" />
-                        </FrameLayout>
-                    </LinearLayout>
+                                android:textSize="@dimen/edx_small"
+                                tools:text="What is Happiness?" />
 
-                    <com.rachitgoyal.segmented.SegmentedProgressBar
-                        android:id="@+id/spb_units"
-                        android:layout_width="match_parent"
-                        android:layout_height="@dimen/complete_progressbar_height"
-                        app:cornerRadius="0dp"
-                        app:dividerColor="@color/neutralWhiteT"
-                        app:dividerWidth="@dimen/complete_progressbar_divider_width"
-                        app:divisions="5"
-                        app:isDividerEnabled="true"
-                        app:progressBarBackgroundColor="@color/neutralDark"
-                        app:progressBarColor="@color/accentBColor" />
+                            <FrameLayout
+                                android:id="@+id/fl_units_drop_down"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/edx_x_quarter_margin">
 
-                </LinearLayout>
+                                <com.google.android.material.textview.MaterialTextView
+                                    android:id="@+id/course_unit_title"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:ellipsize="end"
+                                    android:fontFamily="?attr/fontBold"
+                                    android:textColor="@color/neutralWhiteT"
+                                    android:textDirection="locale"
+                                    android:textSize="@dimen/edx_base"
+                                    tools:text="Introducing Weekly Check In" />
+                            </FrameLayout>
+                        </LinearLayout>
 
-                <androidx.appcompat.widget.Toolbar
-                    android:id="@+id/collapsed_toolbar_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="@dimen/collapsed_toolbar_height"
-                    android:background="@color/primaryLightColor"
-                    android:contentInsetStart="0dp"
-                    app:contentInsetStart="0dp"
-                    app:layout_collapseMode="pin">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:gravity="center_vertical"
-                        android:orientation="horizontal">
-
-                        <androidx.appcompat.widget.AppCompatImageView
-                            android:id="@+id/iv_collapsed_back"
-                            android:layout_width="@dimen/ic_base"
-                            android:layout_height="@dimen/ic_base"
-                            android:layout_marginStart="@dimen/widget_margin"
-                            android:rotation="180"
-                            android:tint="@color/neutralWhiteT"
-                            app:srcCompat="@drawable/ic_arrow_right"
-                            tools:ignore="ContentDescription" />
-
-                        <com.google.android.material.textview.MaterialTextView
-                            android:id="@+id/collapsed_toolbar_title"
+                        <com.rachitgoyal.segmented.SegmentedProgressBar
+                            android:id="@+id/spb_units"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginStart="@dimen/widget_margin"
-                            android:ellipsize="end"
-                            android:fontFamily="?attr/fontBold"
-                            android:maxLines="1"
-                            android:textAppearance="@style/CourseDashboardCollapsedToolbarTitle"
-                            android:textSize="@dimen/edx_small"
-                            android:textStyle="bold"
-                            tools:text="Introducing Weekly Check Ins" />
+                            android:layout_height="@dimen/complete_progressbar_height"
+                            app:cornerRadius="0dp"
+                            app:dividerColor="@color/neutralWhiteT"
+                            app:dividerWidth="@dimen/complete_progressbar_divider_width"
+                            app:divisions="5"
+                            app:isDividerEnabled="true"
+                            app:progressBarBackgroundColor="@color/neutralDark"
+                            app:progressBarColor="@color/accentBColor" />
 
                     </LinearLayout>
 
-                </androidx.appcompat.widget.Toolbar>
+                    <androidx.appcompat.widget.Toolbar
+                        android:id="@+id/collapsed_toolbar_layout"
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/collapsed_toolbar_height"
+                        android:background="@color/primaryLightColor"
+                        android:contentInsetStart="0dp"
+                        app:contentInsetStart="0dp"
+                        app:layout_collapseMode="pin">
 
-            </com.google.android.material.appbar.CollapsingToolbarLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:gravity="center_vertical"
+                            android:orientation="horizontal">
 
-        </com.google.android.material.appbar.AppBarLayout>
+                            <androidx.appcompat.widget.AppCompatImageView
+                                android:id="@+id/iv_collapsed_back"
+                                android:layout_width="@dimen/ic_base"
+                                android:layout_height="@dimen/ic_base"
+                                android:layout_marginStart="@dimen/widget_margin"
+                                android:rotation="180"
+                                android:tint="@color/neutralWhiteT"
+                                app:srcCompat="@drawable/ic_arrow_right"
+                                tools:ignore="ContentDescription" />
 
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/pager2"
+                            <com.google.android.material.textview.MaterialTextView
+                                android:id="@+id/collapsed_toolbar_title"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_marginStart="@dimen/widget_margin"
+                                android:ellipsize="end"
+                                android:fontFamily="?attr/fontBold"
+                                android:maxLines="1"
+                                android:textAppearance="@style/CourseDashboardCollapsedToolbarTitle"
+                                android:textSize="@dimen/edx_small"
+                                android:textStyle="bold"
+                                tools:text="Introducing Weekly Check Ins" />
+
+                        </LinearLayout>
+
+                    </androidx.appcompat.widget.Toolbar>
+
+                </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+            </com.google.android.material.appbar.AppBarLayout>
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/pager2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:clipToPadding="false"
+                android:importantForAccessibility="no"
+                android:orientation="horizontal"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+        <RelativeLayout
+            android:id="@+id/course_unit_nav_bar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:clipToPadding="false"
-            android:importantForAccessibility="no"
-            android:orientation="horizontal"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+            android:layout_height="@dimen/course_unit_nav_bar_height"
+            android:background="@drawable/rectangle_with_top_border"
+            android:gravity="center_vertical"
+            android:paddingStart="@dimen/course_unit_nav_bar_padding_right"
+            android:paddingEnd="@dimen/course_unit_nav_bar_padding_left"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/goto_prev"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:fontFamily="?attr/fontRegular"
+                android:text="@string/assessment_previous"
+                android:textColor="@color/neutralXDark"
+                android:textSize="@dimen/edx_large" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/goto_next"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:fontFamily="?attr/fontRegular"
+                android:text="@string/assessment_next"
+                android:textColor="@color/neutralXDark"
+                android:textSize="@dimen/edx_large"
+                tools:ignore="RelativeOverlap" />
+        </RelativeLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
