--- a/OpenEdXMobile/res/layout/fragment_account.xml
+++ b/OpenEdXMobile/res/layout/fragment_account.xml
@@ -22,6 +22,7 @@
             android:orientation="vertical">
 
             <TextView
+                android:id="@+id/lbl_video_settings"
                 style="@style/profile_field_heading"
                 android:layout_marginTop="@dimen/edx_default_margin"
                 android:text="@string/label_video_settings" />
@@ -37,6 +38,7 @@
                 android:orientation="horizontal">
 
                 <TextView
+                    android:id="@+id/lbl_wifi_only_download"
                     style="@style/profile_field_title"
                     android:text="@string/settings_wifi_top" />
 
@@ -51,6 +53,7 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/lbl_wifi_only_download_description"
                 style="@style/profile_field_description"
                 android:text="@string/settings_wifi_bottom" />
 
@@ -97,6 +100,7 @@
                 android:paddingEnd="@dimen/edx_default_margin">
 
                 <TextView
+                    android:id="@+id/lbl_video_download_quality"
                     style="@style/profile_field_title"
                     android:layout_width="match_parent"
                     android:layout_marginBottom="@dimen/edx_half_margin"
@@ -128,6 +132,7 @@
                 tools:visibility="visible">
 
                 <TextView
+                    android:id="@+id/lbl_personal_info"
                     style="@style/profile_field_heading"
                     android:text="@string/label_personal_information" />
 
@@ -208,10 +213,12 @@
                 tools:visibility="visible">
 
                 <TextView
+                    android:id="@+id/lbl_purchases"
                     style="@style/profile_field_heading"
                     android:text="@string/label_purchase" />
 
                 <TextView
+                    android:id="@+id/lbl_restore_purchases"
                     style="@style/profile_field_title"
                     android:layout_width="match_parent"
                     android:layout_marginStart="@dimen/edx_default_margin"
@@ -221,6 +228,7 @@
                     android:text="@string/title_purchase" />
 
                 <TextView
+                    android:id="@+id/lbl_restore_purchases_description"
                     style="@style/profile_field_description"
                     android:text="@string/description_purchase" />
 
@@ -250,6 +258,7 @@
                 tools:visibility="visible">
 
                 <TextView
+                    android:id="@+id/lbl_privacy"
                     style="@style/profile_field_heading"
                     android:paddingBottom="@dimen/edx_quarter_margin"
                     android:text="@string/label_privacy" />
@@ -329,6 +338,7 @@
                 tools:visibility="visible">
 
                 <TextView
+                    android:id="@+id/lbl_submit_feedback"
                     style="@style/profile_field_title"
                     android:layout_width="match_parent"
                     android:layout_marginStart="@dimen/edx_default_margin"
@@ -359,6 +369,7 @@
                 tools:visibility="visible">
 
                 <TextView
+                    android:id="@+id/lbl_get_support"
                     style="@style/profile_field_title"
                     android:layout_width="match_parent"
                     android:layout_marginStart="@dimen/edx_default_margin"
@@ -427,6 +438,7 @@
                     android:textColor="@color/errorBase" />
 
                 <TextView
+                    android:id="@+id/lbl_delete_account_description"
                     style="@style/profile_field_description"
                     android:layout_marginBottom="@dimen/container_padding"
                     android:text="@string/description_delete_account"
