feat: Enhance Scrolling Experience for Discover Section
- Renamed the title from Discover to Explore the Catalog
- Defaulted the title to be hidden in favor of the webview's internal title
- The title will only be displayed upon scrolling
- Ensured consistency between the discovery experience for both guest users and logged-in users

Fixes: LEARNER-9514

--- a/OpenEdXMobile/res/values/strings_2.xml
+++ b/OpenEdXMobile/res/values/strings_2.xml
@@ -82,4 +82,7 @@
     <string name="continue_with_social">Continue with %s</string>
     <!-- Message shown while user waits for response to a sign in request-->
     <string name="signing_in">Signing in</string>
+
+    <!-- Title of Discover screen -->
+    <string name="label_explore_the_catalog">Explore the catalog</string>
 </resources>
