--- a/OpenEdXMobile/res/layout/fragment_webview_discovery.xml
+++ b/OpenEdXMobile/res/layout/fragment_webview_discovery.xml
@@ -9,13 +9,12 @@
     <include
         android:id="@+id/toolbar"
         layout="@layout/collapsible_toolbar_layout"
-        android:visibility="gone" />
+        android:visibility="invisible" />
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipe_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        android:layout_height="match_parent">
 
         <FrameLayout
             android:id="@+id/content_error_root"
